--- a/analyzer.html
+++ b/analyzer.html
@@ -30,7 +30,7 @@
         <label class="label">Instagram Linki</label>
         <input id="link" placeholder="https://instagram.com/kullaniciadi" required />
         <label class="label">AI Sunucu Adresi</label>
-        <input id="apiBase" placeholder="http://localhost:8787" value="http://localhost:8787" />
+        <input id="apiBase" placeholder= https://shadowos-backend.onrender.com value="http://localhost:8787" />
         <button class="btn btn--block" type="submit">AI ile İncele</button>
         <p class="muted tiny" style="margin-top:10px">
           Not: “Çok profesyonel + aynı cevap yok” için analiz artık backend’de OpenAI ile üretilir.
