--- a/analyzer.html
+++ b/analyzer.html
@@ -205,6 +205,33 @@
         $("errorBox").style.display = "block";
       }
     });
-  </script>
+  </script>.  <section id="payment-section" style="max-width:720px; margin:40px auto; padding:24px; border:1px solid #ddd; border-radius:12px;">
+  <h2>🔒 Kişiye Özel Instagram Strateji Analizi</h2>
+
+  <p>
+    Instagram hesabın için <strong>AI tarafından hazırlanmış</strong>,
+    tamamen sana özel bir strateji raporu alıyorsun.
+  </p>
+
+  <ul>
+    <li>✔️ Net niş tespiti</li>
+    <li>✔️ İçerik analizi (kanıta dayalı)</li>
+    <li>✔️ Eksik kalan ama büyüme getiren konular</li>
+    <li>✔️ 30 günlük içerik planı</li>
+    <li>✔️ Dijital ürüne dönüştürülebilir fikirler</li>
+  </ul>
+
+  <p><strong>📄 Rapor PDF olarak teslim edilir.</strong></p>
+
+  <p><strong>Fiyat: 149 TL (tek seferlik)</strong></p>
+
+  <button style="padding:12px 20px; font-size:16px;">
+    Analizi Satın Al ve PDF’ini Al
+  </button>
+
+  <p style="font-size:12px; margin-top:12px; color:#666;">
+    Bu rapor AI desteklidir, yönlendirici niteliktedir.
+  </p>
+</section>
 </body>
 </html>
