--- a/analyzer.html
+++ b/analyzer.html
@@ -225,9 +225,11 @@
 
   <p><strong>Fiyat: 149 TL (tek seferlik)</strong></p>
 
+<a href="BURAYA_STRIPE_LINKİNİ_YAPIŞTIR" target="_blank">
   <button style="padding:12px 20px; font-size:16px;">
     Analizi Satın Al ve PDF’ini Al
   </button>
+</a>
 
   <p style="font-size:12px; margin-top:12px; color:#666;">
     Bu rapor AI desteklidir, yönlendirici niteliktedir.
