Update Stripe link for purchasing analysis

--- a/analyzer.html
+++ b/analyzer.html
@@ -225,7 +225,7 @@
 
   <p><strong>Fiyat: 149 TL (tek seferlik)</strong></p>
 
-<a href="BURAYA_STRIPE_LINKİNİ_YAPIŞTIR" target="_blank">
+<a href='https://buy.stripe.com/test_cNi3cp5vLca61MGgEm6Vq00'target="_blank">
   <button style="padding:12px 20px; font-size:16px;">
     Analizi Satın Al ve PDF’ini Al
   </button>
