--- a/analyzer.html
+++ b/analyzer.html
@@ -205,7 +205,18 @@
         $("errorBox").style.display = "block";
       }
     });
-  </script>.  <section id="payment-section" style="max-width:720px; margin:40px auto; padding:24px; border:1px solid #ddd; border-radius:12px;">
+  </script>. <script>
+  const params = new URLSearchParams(window.location.search);
+  const paid = params.get("paid");
+
+  if (paid === "true") {
+    // ödeme yapılmışsa analiz otomatik başlasın
+    setTimeout(() => {
+      const analyzeBtn = document.getElementById("analyze-btn");
+      if (analyzeBtn) analyzeBtn.click();
+    }, 1000);
+  }
+</script> <section id="payment-section" style="max-width:720px; margin:40px auto; padding:24px; border:1px solid #ddd; border-radius:12px;">
   <h2>🔒 Kişiye Özel Instagram Strateji Analizi</h2>
 
   <p>
