Add new purchase link for analysis

--- a/analyzer.html
+++ b/analyzer.html
@@ -237,6 +237,7 @@
   <p><strong>Fiyat: 149 TL (tek seferlik)</strong></p>
 
 <a href='https://buy.stripe.com/test_bJe9ANbU97TQ8b487Q6Vq03'target="_blank">
+ <a href="https://buy.stripe.com/test_dRmcMZ2jz4HE8b41Js6Vq04" target="_blank">
   <button style="padding:12px 20px; font-size:16px;">
     Analizi Satın Al ve PDF’ini Al
   </button>
