--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     </div>
     <div class="nav__right">
       <a href="login.html" class="btn btn--ghost">Giriş</a>
-      <a href="signup.html" class="btn">Ücretsiz Başla</a>
+      <a href="signup.html" class="btn"><div style="font-size:18px; margin-top:10px;">
+  <span style="text-decoration:line-through; opacity:0.6;">$30</span>
+  <span style="font-weight:700; margin-left:8px;">$19</span>
+</div></a>
     </div>
   </header>
 
