--- a/analyzer.html
+++ b/analyzer.html
@@ -238,7 +238,33 @@
 
 <a href='https://buy.stripe.com/test_bJe9ANbU97TQ8b487Q6Vq03'target="_blank">
  <a href="https://buy.stripe.com/test_dRmcMZ2jz4HE8b41Js6Vq04" target="_blank">
+<!-- 👇 BURAYA EKLE -->
+<div style="margin:16px 0; text-align:center;">
+  <div style="
+    display:inline-block;
+    background:#ff4d4f;
+    color:white;
+    font-size:12px;
+    padding:4px 10px;
+    border-radius:20px;
+    margin-bottom:8px;
+    font-weight:600;
+  ">
+    LIMITED OFFER
+  </div>
+
+  <div style="font-size:20px; margin-top:6px;">
+    <span style="text-decoration:line-through; opacity:0.6;">$30</span>
+    <span style="font-weight:700; margin-left:8px;">$19</span>
+  </div>
+</div>
+
+<!-- 👇 BUTON -->
+<a href="BURAYA_STRIPE_LINKİN" target="_blank">
   <button style="padding:12px 20px; font-size:16px;">
+    Analizi Satın Al ve PDF’ini Al
+  </button>
+</a>  <button style="padding:12px 20px; font-size:16px;">
     Analizi Satın Al ve PDF’ini Al
   </button>
 </a>
