--- a/index.html
+++ b/index.html
@@ -108,7 +108,29 @@
           <h2>Hemen başla</h2>
           <p class="muted">Kanalını analiz et, 3 paketli ürün modelini çıkar ve içerik planını oluştur.</p>
         </div>
-        <a class="btn btn--lg" href="signup.html">Ücretsiz Başla</a>
+        <a class="btn btn--lg" href="signup.html">Ücretsiz Başla</a><div style="margin:16px 0; text-align:center;">
+  <div style="
+    display:inline-block;
+    background:#ff4d4f;
+    color:white;
+    font-size:12px;
+    padding:4px 10px;
+    border-radius:20px;
+    margin-bottom:8px;
+    font-weight:600;
+  ">
+    LIMITED OFFER
+  </div>
+
+  <div style="font-size:20px; margin-top:6px;">
+    <span style="text-decoration:line-through; opacity:0.6;">$30</span>
+    <span style="font-weight:700; margin-left:8px;">$19</span>
+  </div>
+
+  <div style="font-size:12px; opacity:0.7; margin-top:4px;">
+    Launch price – limited time
+  </div>
+</div>
       </div>
     </section>
   </main>
