Remove href from signup button in index.html
Updated the signup button to remove the href attribute.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <h2>Hemen başla</h2>
           <p class="muted">Kanalını analiz et, 3 paketli ürün modelini çıkar ve içerik planını oluştur.</p>
         </div>
-        <a class="btn btn--lg" href="signup.html">Ücretsiz Başla</a><div style="margin:16px 0; text-align:center;">
+        <a class="btn btn--lg"/a><div style="margin:16px 0; text-align:center;">
   <div style="
     display:inline-block;
     background:#ff4d4f;
