--- a/index.html
+++ b/index.html
@@ -151,5 +151,17 @@
       window.location.href = "dashboard.html";
     });
   </script>
-</body>
+</body><div style="
+  width:100%;
+  background:#ff4d4f;
+  color:white;
+  text-align:center;
+  padding:10px 0;
+  font-size:14px;
+  font-weight:600;
+">
+  LIMITED OFFER —
+  <span style="text-decoration:line-through; opacity:0.8;">$30</span>
+  <span style="margin-left:6px; font-weight:700;">$19</span>
+</div>
 </html>
