--- a/index.html
+++ b/index.html
@@ -5,7 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ShadowOS — AI Creator Intelligence</title>
   <link rel="stylesheet" href="styles.css" />
-</head>
+<style>
+#limited-offer-banner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #ff4d4f;
+  color: white;
+  text-align: center;
+  padding: 12px 0;
+  font-size: 14px;
+  font-weight: 600;
+  z-index: 9999;
+}
+
+#limited-offer-banner .old-price {
+  text-decoration: line-through;
+  opacity: 0.8;
+  margin-left: 6px;
+}
+
+#limited-offer-banner .new-price {
+  font-weight: 700;
+  margin-left: 6px;
+}
+</style></head>
 <body>
   <header class="nav nav--glass">
     <div class="nav__left">
