--- a/index.html
+++ b/index.html
@@ -188,5 +188,5 @@
   LIMITED OFFER —
   <span style="text-decoration:line-through; opacity:0.8;">$30</span>
   <span style="margin-left:6px; font-weight:700;">$19</span>
-</div>
+</div><div style="height:48px;"></div>
 </html>
