Refactor analyzer.html for styling and title update
Updated page title and modified CSS variables for improved styling. Removed unused styles and adjusted gradients for better visual appeal.

--- a/analyzer.html
+++ b/analyzer.html
@@ -3,435 +3,27 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ShadowOS — AI Instagram Analyzer</title>
-
+  <title>ShadowOS • AI Instagram Channel Analysis</title>
   <style>
     :root{
-      --bg1:#060b14;
-      --bg2:#0a1b2e;
-      --card: rgba(255,255,255,.06);
-      --border: rgba(255,255,255,.14);
-      --text: rgba(255,255,255,.92);
-      --muted: rgba(255,255,255,.65);
-      --accent:#22c55e;
-      --danger:#ef4444;
-      --warn:#f59e0b;
+      --bg1:#071022;
+      --bg2:#061a2a;
+      --card:rgba(255,255,255,0.06);
+      --card2:rgba(255,255,255,0.08);
+      --border:rgba(255,255,255,0.12);
+      --text:rgba(255,255,255,0.92);
+      --muted:rgba(255,255,255,0.65);
+      --green:#22c55e;
+      --green2:#16a34a;
+      --red:#ef4444;
+      --yellow:#f59e0b;
     }
     *{box-sizing:border-box}
     body{
       margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
       color:var(--text);
       background:
-        radial-gradient(1000px 700px at 20% 0%, #0b3b2a40, transparent 55%),
-        radial-gradient(800px 600px at 90% 20%, #2b3fff35, transparent 55%),
-        linear-gradient(180deg, var(--bg1), var(--bg2));
-      min-height:100vh;
-    }
-    a{color:inherit}
-    .topbar{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      padding:16px 18px;
-    }
-    .brand{
-      display:flex; gap:10px; align-items:center;
-      font-weight:700; letter-spacing:.2px;
-    }
-    .logo{
-      width:34px; height:34px;
-      display:grid; place-items:center;
-      border-radius:10px;
-      background:linear-gradient(135deg, rgba(34,197,94,.35), rgba(59,130,246,.25));
-      border:1px solid var(--border);
-    }
-    .pill{
-      border:1px solid var(--border);
-      background: rgba(0,0,0,.25);
-      padding:10px 12px;
-      border-radius:999px;
-      color:var(--muted);
-      font-size:13px;
-      text-decoration:none;
-    }
-    .wrap{
-      max-width:960px;
-      margin:0 auto;
-      padding:10px 18px 28px;
-    }
-    .hero{
-      padding:18px 0 10px;
-    }
-    h1{
-      margin:0 0 8px;
-      font-size:28px;
-      line-height:1.15;
-    }
-    .sub{
-      margin:0;
-      color:var(--muted);
-      font-size:14px;
-      line-height:1.6;
-      max-width:62ch;
-    }
-    .grid{
-      display:grid;
-      grid-template-columns: 1.2fr .8fr;
-      gap:16px;
-      margin-top:18px;
-    }
-    @media (max-width: 860px){
-      .grid{grid-template-columns: 1fr;}
-    }
-    .card{
-      border:1px solid var(--border);
-      background: var(--card);
-      border-radius:16px;
-      padding:16px;
-      backdrop-filter: blur(10px);
-    }
-    .card h2{
-      margin:0 0 10px;
-      font-size:16px;
-    }
-    label{
-      display:block;
-      color:var(--muted);
-      font-size:13px;
-      margin:12px 0 8px;
-    }
-    input{
-      width:100%;
-      padding:12px 12px;
-      border-radius:12px;
-      border:1px solid rgba(255,255,255,.18);
-      background: rgba(0,0,0,.25);
-      color:var(--text);
-      outline:none;
-      font-size:14px;
-    }
-    input:focus{
-      border-color: rgba(34,197,94,.55);
-      box-shadow: 0 0 0 4px rgba(34,197,94,.12);
-    }
-    .row{
-      display:flex; gap:10px; flex-wrap:wrap;
-      margin-top:12px;
-      align-items:center;
-    }
-    button{
-      cursor:pointer;
-      border:none;
-      padding:12px 14px;
-      border-radius:12px;
-      font-weight:700;
-      font-size:14px;
-    }
-    .btn-primary{
-      background: linear-gradient(135deg, rgba(34,197,94,.95), rgba(34,197,94,.75));
-      color:#05110b;
-      min-width: 180px;
-    }
-    .btn-ghost{
-      background: rgba(255,255,255,.08);
-      border:1px solid rgba(255,255,255,.14);
-      color:var(--text);
-    }
-    .hint{
-      color:var(--muted);
-      font-size:12px;
-      margin-top:10px;
-      line-height:1.55;
-    }
-    .badge{
-      display:inline-block;
-      padding:6px 10px;
-      border-radius:999px;
-      border:1px solid rgba(255,255,255,.18);
-      background: rgba(0,0,0,.22);
-      color:var(--muted);
-      font-size:12px;
-      margin-right:8px;
-    }
-    .offer{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:12px;
-      padding:12px 12px;
-      border-radius:14px;
-      border:1px solid rgba(34,197,94,.35);
-      background: rgba(34,197,94,.08);
-      margin-top:12px;
-    }
-    .offer strong{font-size:14px}
-    .price{
-      text-align:right;
-      font-size:13px;
-      color:var(--muted);
-    }
-    .price s{opacity:.7}
-    .price b{color:var(--text); font-size:16px}
-    .result{
-      margin-top:14px;
-      padding:14px;
-      border-radius:14px;
-      border:1px solid rgba(255,255,255,.14);
-      background: rgba(0,0,0,.28);
-      white-space: pre-wrap;
-      font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-      font-size:13px;
-      line-height:1.5;
-      max-height: 520px;
-      overflow:auto;
-    }
-    .status{
-      margin-top:12px;
-      font-size:13px;
-      color:var(--muted);
-    }
-    .status.ok{color: rgba(34,197,94,.95);}
-    .status.err{color: rgba(239,68,68,.95);}
-    .status.warn{color: rgba(245,158,11,.95);}
-    .small{
-      font-size:12px;
-      color:var(--muted);
-      line-height:1.55;
-    }
-    .split{
-      display:flex; gap:10px; flex-wrap:wrap; align-items:center; justify-content:space-between;
-      margin-top:8px;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="topbar">
-    <div class="brand">
-      <div class="logo">S</div>
-      <div>ShadowOS</div>
-    </div>
-    <a class="pill" href="./dashboard.html">Back to Panel</a>
-  </div>
-
-  <div class="wrap">
-    <div class="hero">
-      <h1>AI Instagram Channel Analysis</h1>
-      <p class="sub">
-        Paste an Instagram profile link. The AI will infer the niche, topics, content gaps, a simple digital product idea,
-        and a 30-day content plan.
-      </p>
-    </div>
-
-    <div class="grid">
-      <!-- LEFT -->
-      <div class="card">
-        <h2>Analyzer</h2>
-
-        <label for="igUrl">Instagram Profile URL</label>
-        <input id="igUrl" type="url" placeholder="https://www.instagram.com/username/" autocomplete="off" />
-
-        <label for="apiBase">AI Server (Render)</label>
-        <input id="apiBase" type="url" placeholder="https://shadowos-backend.onrender.com" />
-
-        <div class="row">
-          <button id="analyzeBtn" class="btn-primary">Analyze with AI</button>
-          <button id="clearBtn" class="btn-ghost">Clear</button>
-        </div>
-
-        <div id="status" class="status">Ready.</div>
-
-        <div id="result" class="result" style="display:none;"></div>
-
-        <div class="hint">
-          Tip: If you use Stripe and return back here after payment, your Instagram link will stay saved automatically.
-        </div>
-      </div>
-
-      <!-- RIGHT -->
-      <div class="card">
-        <h2>What you get</h2>
-
-        <div class="split">
-          <span class="badge">Niche</span>
-          <span class="badge">Topics</span>
-          <span class="badge">Gaps</span>
-          <span class="badge">Product idea</span>
-          <span class="badge">30-day plan</span>
-        </div>
-
-        <div class="offer">
-          <div>
-            <strong>LIMITED OFFER</strong>
-            <div class="small">One-time analysis. Instant result on this page.</div>
-          </div>
-          <div class="price">
-            <div><s>$30</s> <b>$19</b></div>
-            <div class="small">test price / change later</div>
-          </div>
-        </div>
-
-        <p class="small" style="margin-top:12px;">
-          Note: The accuracy depends on what public data can be read from the Instagram page. If Instagram blocks scraping,
-          the AI will still generate a best-effort strategy based on available page metadata.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    // ---------------------------
-    // CONFIG
-    // ---------------------------
-    const DEFAULT_API_BASE = "https://shadowos-backend.onrender.com";
-    const STORAGE_KEY_URL = "shadowos_ig_url";
-    const STORAGE_KEY_API = "shadowos_api_base";
-
-    // ---------------------------
-    // DOM
-    // ---------------------------
-    const igUrlEl   = document.getElementById("igUrl");
-    const apiBaseEl = document.getElementById("apiBase");
-    const analyzeBtn = document.getElementById("analyzeBtn");
-    const clearBtn   = document.getElementById("clearBtn");
-    const statusEl   = document.getElementById("status");
-    const resultEl   = document.getElementById("result");
-
-    // ---------------------------
-    // Helpers
-    // ---------------------------
-    function setStatus(text, type="") {
-      statusEl.className = "status" + (type ? " " + type : "");
-      statusEl.textContent = text;
-    }
-
-    function showResult(text) {
-      resultEl.style.display = "block";
-      resultEl.textContent = text;
-    }
-
-    function hideResult() {
-      resultEl.style.display = "none";
-      resultEl.textContent = "";
-    }
-
-    function normalizeInstagramUrl(url) {
-      let u = (url || "").trim();
-      if (!u) return "";
-      if (!u.startsWith("http")) u = "https://" + u;
-      // Basic safety: enforce instagram.com domain if possible
-      try {
-        const parsed = new URL(u);
-        // Accept instagram.com or www.instagram.com
-        if (!parsed.hostname.includes("instagram.com")) return "";
-        return parsed.toString();
-      } catch {
-        return "";
-      }
-    }
-
-    function normalizeApiBase(url) {
-      let u = (url || "").trim();
-      if (!u) return DEFAULT_API_BASE;
-      if (!u.startsWith("http")) u = "https://" + u;
-      // remove trailing slash
-      if (u.endsWith("/")) u = u.slice(0, -1);
-      return u;
-    }
-
-    // ---------------------------
-    // Restore saved state
-    // ---------------------------
-    (function init(){
-      const savedUrl = localStorage.getItem(STORAGE_KEY_URL);
-      const savedApi = localStorage.getItem(STORAGE_KEY_API);
-
-      igUrlEl.value = savedUrl || "";
-      apiBaseEl.value = savedApi || DEFAULT_API_BASE;
-
-      // Also: if coming back from Stripe with ?url=...
-      const params = new URLSearchParams(window.location.search);
-      const urlParam = params.get("url");
-      if (urlParam) {
-        const normalized = normalizeInstagramUrl(urlParam);
-        if (normalized) {
-          igUrlEl.value = normalized;
-          localStorage.setItem(STORAGE_KEY_URL, normalized);
-        }
-      }
-    })();
-
-    // Keep API base saved
-    apiBaseEl.addEventListener("input", () => {
-      localStorage.setItem(STORAGE_KEY_API, normalizeApiBase(apiBaseEl.value));
-    });
-
-    // Keep IG URL saved
-    igUrlEl.addEventListener("input", () => {
-      const normalized = igUrlEl.value.trim();
-      localStorage.setItem(STORAGE_KEY_URL, normalized);
-    });
-
-    // ---------------------------
-    // Actions
-    // ---------------------------
-    clearBtn.addEventListener("click", (e) => {
-      e.preventDefault();
-      igUrlEl.value = "";
-      hideResult();
-      setStatus("Cleared. Ready.", "");
-      localStorage.removeItem(STORAGE_KEY_URL);
-    });
-
-    analyzeBtn.addEventListener("click", async (e) => {
-      e.preventDefault();
-
-      hideResult();
-
-      const igUrl = normalizeInstagramUrl(igUrlEl.value);
-      const apiBase = normalizeApiBase(apiBaseEl.value);
-
-      if (!igUrl) {
-        setStatus("Please enter a valid Instagram profile URL (instagram.com/...).", "warn");
-        return;
-      }
-
-      localStorage.setItem(STORAGE_KEY_URL, igUrl);
-      localStorage.setItem(STORAGE_KEY_API, apiBase);
-
-      setStatus("Analyzing... (this can take a few seconds)", "");
-
-      try {
-        const resp = await fetch(apiBase + "/analyze", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ url: igUrl })
-        });
-
-        let data = null;
-        try { data = await resp.json(); } catch { /* ignore */ }
-
-        if (!resp.ok) {
-          const msg = (data && (data.error || data.message)) ? (data.error || data.message) : "Request failed.";
-          setStatus("Analysis failed: " + msg, "err");
-          showResult(JSON.stringify(data || { error: msg }, null, 2));
-          return;
-        }
-
-        // backend might return { result: "..."} or structured JSON
-        const output =
-          (data && typeof data.result === "string") ? data.result :
-          (data ? JSON.stringify(data, null, 2) : "No data.");
-
-        setStatus("Done ✅", "ok");
-        showResult(output);
-
-      } catch (err) {
-        setStatus("Server connection error. Check API URL / CORS / Render status.", "err");
-        showResult(String(err));
-      }
-    });
-  </script>
-</body>
-</html>
+        radial-gradient(1200px 600px at 20% 20%, rgba(34,197,94,0.12), transparent 60%),
+        radial-gradient(900px 500px at 80% 30%, rgba(59,130,246,0.14), transparent 55%),
+        linear-gradient(
